--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   firebase_core: "^1.7.0"
   cloud_firestore: "^2.5.4"
   cupertino_icons: ^1.0.2
+  firebase_auth: ^3.1.4
+  modal_progress_hud: ^0.1.3
 
 dev_dependencies:
   flutter_test:
